--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "firebase": "^7.14.0",
     "vue": "^2.6.11",
     "vue-router": "^3.0.3",
+    "vuefire": "^2.1.0",
+    "vuetify": "^1.5.5",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
