--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "eslint-loader": "^4.0.0",
     "firebase": "^7.14.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.0.3",
+    "vue-router": "^3.1.6",
     "vuefire": "^2.1.0",
     "vuetify": "^1.5.5",
     "vuex": "^3.1.3"
@@ -25,7 +26,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.9.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.3.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.5.0",
