--- a/package.json
+++ b/package.json
@@ -8,31 +8,30 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
-    "eslint-loader": "^4.0.0",
-    "firebase": "^7.14.0",
+    "core-js": "^2.6.11",
+    "firebase": "^6.6.2",
     "ionic": "^5.4.16",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuefire": "^2.1.0",
-    "vuetify": "^1.5.5",
+    "vuefire": "^2.2.2",
+    "vuetify": "^1.5.24",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-prettier": "^4.0.1",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.9.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.13.1",
     "sass-loader": "^7.3.1",
-    "stylus": "^0.54.5",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.0.5"
+    "vuetify-loader": "^1.4.3"
   },
   "eslintConfig": {
     "root": true,
